# wasmer

./: build.rs
lib/api/src/js/: mod.rs
lib/api/src/sys/: imports.rs
lib/cli/src/commands/run/: wasi.rs
lib/compiler-cranelift/src/: compiler.rs
lib/compiler-singlepass/src/: codegen.rs  emitter_arm64.rs  emitter_x64.rs  machine.rs  machine_arm64.rs  machine_x64.rs
lib/types/src/: vmoffsets.rs
lib/vfs/: Cargo.toml
lib/vfs/src/: lib.rs
lib/vfs/src/mem_fs/: file.rs  file_opener.rs  filesystem.rs  mod.rs  slab_adapter.rs
lib/vfs/src/mem_fs/shared_slab/: mod.rs  ropes_abuf.rs  ui8a_ropes.rs
lib/vm/src/: memory.rs
lib/vm/src/instance/: mod.rs
lib/wasi/src/: lib.rs  utils.rs
lib/wasi/src/state/: mod.rs
tests/: ignores.txt
