[package]
name = "wasmer-vfs"
version = "3.0.0-beta"
description = "Wasmer Virtual FileSystem"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
license = "MIT"
edition = "2018"

[dependencies]
libc = { version = "^0.2", default-features = false, optional = true }
thiserror = "1"
tracing = { version = "0.1" }
typetag = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["std", "derive"] }
serde_derive = "1.0.144"
serde_cbor = "0.11.2"
#serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
fatfs = "0.3.5"
bufreaderwriter = "0.1.2"
byteorder = "1.4.3"
slab = { version = "0.4", optional = true }

js-sys = "0.3.55"
web-sys = "0.3.60"

[features]
default = ["host-fs", "mem-fs"]
host-fs = ["libc"]
mem-fs = ["slab"]
#enable-serde = [
#    "serde",
#    "typetag"
#]
no-time = []
